# SuperRelay

./: .cursor-rules  .env.example  .gitignore  .temp_policy.toml  .test_accounts.json  CLAUDE.md  Cargo.toml  DEPLOYMENT_SOLUTIONS.md  DEPLOYMENT_VERIFICATION.md  Makefile  README.md  SERVICE_ACCESS_GUIDE.md  TEST_EXECUTION_REPORT.md  TODO_REAL_TEE_TESTING.md  debug_signature.js  demo_complete_flow.js  manual_test.js  nohup.out  package-lock.json  package.json  phase1-test-explain-report.md  playwright.config.js  real_system_demo.js  test-2025-01-16-log.md  test_bls_protection_standalone.rs  test_encryption_standalone.rs  test_h2_1_integration.rs  test_http_phase1.rs  test_method_name_explanation.md  test_paymaster_complete.js  test_phase1.sh  test_phase1_enhanced.rs
.claude/: settings.local.json
.cursor/rules/: jason.mdc
.github/scripts/: compliance_parser.sh
.github/workflows/: docker-release.yaml
.taskmaster/: config.json  state.json
config/: config.toml  dual-service-test.toml  gateway.toml  imx93-config.toml  optee-config.toml  paymaster-policies-prod.toml  paymaster-policies.toml  production.toml  super-relay.toml  test-config.toml
crates/builder/: Cargo.toml
crates/builder/proto/: buf.yaml
crates/builder/proto/builder/: builder.proto
crates/contracts/: Cargo.toml
crates/contracts/src/: v0_7.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: api_docs.rs  authorization.rs  bls_protection.rs  bls_protection_service.rs  config_system.rs  contract_account_security.rs  dual_signature_flow.rs  e2e_validator.rs  encryption_middleware.rs  error.rs  gateway.rs  health.rs  lib.rs  middleware.rs  module_system.rs  multi_layer_verification_flow.rs  router.rs  rundler_integration_module.rs  sbt_validator.rs  security.rs  signature_validator.rs  tee_security_engine.rs  user_data_encryption.rs  validation.rs  version_selector.rs
crates/gateway/tests/: h2_1_integration.rs  h2_2_rpc_config.rs  h2_3_signature_validation.rs  h3_1_v08_support.rs  l1_end_to_end_integration.rs  m1_user_data_encryption.rs  m2_bls_protection.rs  m3_contract_account_security.rs  security_integration_tests.rs
crates/paymaster-relay/: Cargo.toml  generated_openapi.json
crates/paymaster-relay/examples/: generate_openapi.rs
crates/paymaster-relay/src/: airaccount_kms.rs  api_docs.rs  api_handlers.rs  api_schemas.rs  api_server.rs  aws_kms.rs  config.rs  error.rs  integration_tests.rs  key_manager.rs  kms.rs  lib.rs  metrics.rs  optee_kms.rs  policy.rs  proxy_client.rs  proxy_server.rs  rpc.rs  schemas.rs  service.rs  signer.rs  statistics.rs  swagger.rs  validation.rs
crates/paymaster-relay/tests/: integration_test.rs  kms_integration_tests.rs  rpc_test.rs  swagger_test.rs
crates/pool/: Cargo.toml
crates/pool/proto/: buf.yaml
crates/pool/proto/op_pool/: op_pool.proto
crates/pool/src/: task.rs
crates/provider/: Cargo.toml
crates/provider/src/: lib.rs
crates/provider/src/fees/: oracle.rs
crates/provider/src/traits/: mod.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: lib.rs  rate_limiter.rs  task.rs
crates/rpc/src/types/: mod.rs
crates/sim/: Cargo.toml
crates/sim/src/estimation/: v0_6.rs  v0_7.rs
crates/sim/src/simulation/: mod.rs
crates/types/: Cargo.toml
crates/types/src/: aggregator.rs
crates/types/src/user_operation/: mod.rs  v0_6.rs  v0_7.rs  v0_8.rs
crates/utils/src/: guard_timer.rs
demo/: README.md  curl-test.sh  interactive-demo.html  package-lock.json  package.json  superPaymasterDemo.js
docker/: Dockerfile.optee-qemu  optee-startup.sh  qemu-monitor.py
docs/: API-Analysis.md  API_GENERATION_GUIDE.md  ARCHITECTURE_EXPLAINED.md  ARCHITECTURE_SECURITY_REVIEW.md  AirAccount-SuperRelay-Integration-Plan.md  Architecture-Analysis.md  Architecture_Refactoring_Plan.md  BuildOptimization.md  Changes.md  Changes_backup_v0.1.16.md  CodeAnalysis.md  Communication.md  Components.md  Comprehensive-Review.md  DEPLOYMENT_VERIFICATION.md  Deploy.md  Design.md  ERC4337-ComplianceReport-20250805.md  FEATURES.md  HTTP_REST_vs_JSON_RPC.md  Install.md  Optimization-Changes.md  PLAN.md  Phase1.6-ERC4337-StandardizationPlan.md  README.md  SDK-Integration-Guide.md  SECURITY_FIXES_SUMMARY.md  SWAGGER_INTEGRATION.md  SWAGGER_QUICK_START.md  Script-Changes.md  SecurityReport.md  ServiceStartupGuide.md  Solution.md  TEE-Deployment-Plan.md  Test.md  TestDriven.md  TestReport-2025-01-25.md  Testing-Analysis.md  Testing-Summary.md  UTOIPA_MIGRATION_REPORT.md  (+17 more)
docs/architecture/: aggregators.md  builder.md  eip7623.md  entry_point.md  rpc.md
k8s/: superrelay-optee-phase2.yaml
scripts/: build.sh  build_all_phases.sh  build_optee_env.sh  build_optimized.sh  check_environment.sh  clean.sh  cleanup_target.sh  comprehensive_check.sh  deploy_contracts.sh  deploy_entrypoint.sh  deploy_entrypoint_v0_7.sh  deploy_imx93_hardware.sh  dev_env_setup.sh  extract_api_info.py  format.sh  fund_paymaster.sh  generate_chain_spec.sh  install_claude_code.sh  load_dev_env.sh  quick_start.sh  restart_super_relay.sh  run_demo.sh  security_check.sh  setup_dev_env.sh  setup_test_accounts.sh  setup_test_accounts_sepolia.sh  start_anvil.sh  start_api_server.sh  start_dev_server.sh  start_production.sh  start_superrelay.sh  start_web_ui.sh  stop_anvil.sh  test_basic_gateway.sh  test_complete_flow.sh  test_demo_headless.sh  test_dual_service.sh  test_e2e.sh  test_e2e_transaction.sh  test_full_pipeline.sh  (+20 more)
ta/super_relay_ta/: CMakeLists.txt  Makefile  sub.mk  super_relay_ta.c  user_ta_header_defines.h
ta/super_relay_ta/include/: super_relay_ta.h
test/spec-tests/launchers/rundler-launcher/: rundler-launcher.sh
test/spec-tests/local/: launcher.sh
test/spec-tests/remote/: launcher.sh
test_enhanced/: Cargo.toml  test_erc4337_v06_standard.rs  test_ta_dual_signature.rs
test_enhanced/src/: main.rs  test_fixed.rs  test_real_passkey.rs  test_tee_account.rs  userop_hash_test.rs
tests/: demo-interactive.spec.js
web-ui/: README.md  package-lock.json  package.json
web-ui/swagger-ui/: index.html  openapi-legacy.json  openapi.json
