[package]
name = "super-relay-gateway"
version = "0.1.5"
edition = "2021"
description = "API Gateway for SuperRelay with enterprise features"
license = "GPL-3.0-or-later"

[dependencies]
alloy-primitives = "1.0"

# Error handling
anyhow = "1.0"

# HTTP server and JSON-RPC
axum = { version = "0.7", features = ["json", "tokio"] }
ethers = "2.0"
hex = "0.4"

# Rundler dependencies
rundler-paymaster-relay = { path = "../paymaster-relay" }
rundler-pool = { path = "../pool" }
rundler-types = { path = "../types" }
serde_json = "1.0"
thiserror = "1.0"
# Core async runtime
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Logging and tracing
tracing = "0.1"

[dev-dependencies]
# tokio-test = "0.4"  # Currently unused