[package]
name = "rundler-paymaster-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
anyhow = "1.0"
async-trait = { workspace = true }
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
ethers = { workspace = true }
eyre = { workspace = true }
futures-util.workspace = true
jsonrpsee = { workspace = true, features = ["full"] }
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }
rundler-pool = { path = "../pool" }
rundler-provider = { workspace = true }
rundler-sim = { path = "../sim" }
rundler-types = { path = "../types" }
secrecy = { version = "0.10", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = "1.0"
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tower = { version = "0.4" }
tower-http = { workspace = true, features = ["full"] }
tracing = { workspace = true }
utoipa = { version = "4.2", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

[dev-dependencies]
anyhow = { workspace = true }
ethers = { workspace = true, features = ["ws", "rustls"] }
jsonrpsee-core = { workspace = true, features = ["client"] }
jsonrpsee-ws-client = { workspace = true }
rundler-types = { path = "../types", features = ["test-utils"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
